# quiz_dash

./: .gitignore  README.md  make_language.mak  packages.txt  pyproject.toml  quiz_dash.py  requirements.txt  todo.txt
.devcontainer/: devcontainer.json
locales/: quiz_dash.pot
locales/es/LC_MESSAGES/: quiz_dash.mo
locales/fr/LC_MESSAGES/: quiz_dash.mo
src/quiz_dash/: cli.py  i18n.py  quiz_dash.py
src/quiz_dash/locales/: quiz_dash.pot
src/quiz_dash/locales/es/LC_MESSAGES/: quiz_dash.mo  quiz_dash.po  quiz_dash.po~
src/quiz_dash/locales/fr/LC_MESSAGES/: quiz_dash.mo  quiz_dash.po  quiz_dash.po~
