[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz_dash"
version = "0.9"
description = "LabQuiz streamlit-based dashboard that provides live tracking, integrity verification, and automated correction."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "J.-F. Bercher", email = "jf.bercher@esiee.fr" }
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "ruamel.yaml",
    "streamlit>=1.50",
    "streamlit_autorefresh",
    "streamlit-local-storage",
    "altair==4.2.2",
    "labquiz>=0.9"
]
keywords = ["quizzes", "jupyter"]

classifiers = [
    # État de développement (3 - Alpha, 4 - Beta, 5 - Production/Stable)
    "Development Status :: 4 - Beta",
    
    # Public cible
    "Intended Audience :: Education",
    "Intended Audience :: Developers",

    # LICENCE : Très important pour le badge "License"
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    # VERSIONS PYTHON : Très important pour le badge "Python versions"
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    
    # Environnement
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
"Homepage" = "https://github.com/jfbercher/quiz_dash"
"Bug Tracker" = "https://github.com/jfbercher/quiz_dash/issues"
"Documentation" = "https://github.com/jfbercher/quiz_dash#readme"
"Source" = "https://github.com/jfbercher/quiz_dash"

[project.scripts]
quiz_dash = "quiz_dash.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"quiz_dash" = ["**/*.mo", "**/*.po"]